TrikoPatron proje linki eklendi

--- a/templates/index.html
+++ b/templates/index.html
@@ -266,7 +266,7 @@
                 <span>Bu Sitenin Kodları (Chatbot)</span>
             </a>
 
-            <a href="#" class="btn-dashboard" onclick="alert('Bu proje henüz GitHub\'a yüklenmedi akhi. Önce yüklememiz lazım.')" style="border-color: #22c55e; color: #22c55e;">
+           <a href="https://github.com/AhmetBabli/TrikoPatron-ERP" target="_blank" class="btn-dashboard" style="border-color: #22c55e; color: #22c55e;">
                 <i class="fas fa-industry"></i>
                 <span>TrikoPatron (ERP)</span>
             </a>
